@@ -2,6 +2,14 @@ package de.infoteam.profile_assist.common.markdown;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
+import de.infoteam.profile_assist.common.markdown.mapping.BulletListStrategy;
+import de.infoteam.profile_assist.common.markdown.mapping.DocumentStrategy;
+import de.infoteam.profile_assist.common.markdown.mapping.HeadingStrategy;
+import de.infoteam.profile_assist.common.markdown.mapping.ListItemStrategy;
+import de.infoteam.profile_assist.common.markdown.mapping.NodeMappingFactory;
+import de.infoteam.profile_assist.common.markdown.mapping.ParagraphStrategy;
+import de.infoteam.profile_assist.common.markdown.mapping.StrongEmphasisStrategy;
+import de.infoteam.profile_assist.common.markdown.mapping.TextStrategy;
 import java.util.List;
 import org.commonmark.parser.Parser;
 import org.commonmark.renderer.markdown.MarkdownRenderer;
@@ -11,7 +19,7 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.NullAndEmptySource;
 
-@DisplayName("FlexmarkMarkdownMapperTest")
+@DisplayName("CommonmarkMarkdownMapperTest")
 class CommonmarkMarkdownMapperTest {
 
   private CommonmarkMarkdownMapper mapper;
@@ -21,7 +29,20 @@ class CommonmarkMarkdownMapperTest {
     // Given (common)
     Parser parser = Parser.builder().build();
     MarkdownRenderer renderer = MarkdownRenderer.builder().build();
-    mapper = new CommonmarkMarkdownMapper(parser, renderer);
+    mapper =
+        new CommonmarkMarkdownMapper(
+            parser,
+            renderer,
+            new NodeMappingFactory(
+                List.of(
+                    new HeadingStrategy(),
+                    new BulletListStrategy(),
+                    new ParagraphStrategy(),
+                    new ListItemStrategy(),
+                    new DocumentStrategy(),
+                    new ParagraphStrategy(),
+                    new StrongEmphasisStrategy(),
+                    new TextStrategy())));
   }
 
   @DisplayName("When markdown is null or empty, then Document has no children")
@@ -57,17 +78,17 @@ class CommonmarkMarkdownMapperTest {
     assertThat(document.children()).hasSize(2);
 
     // Heading
-    Heading heading = (Heading) document.children().get(0);
+    Heading heading = (Heading) document.children().getFirst();
     assertThat(heading).isInstanceOf(Heading.class);
     assertThat(heading.level()).isEqualTo(1);
     assertThat(heading.children()).singleElement().isInstanceOf(Text.class);
-    assertThat(((Text) heading.children().get(0)).text()).isEqualTo("Title");
+    assertThat(((Text) heading.children().getFirst()).text()).isEqualTo("Title");
 
     // Paragraph
     Paragraph paragraph = (Paragraph) document.children().get(1);
     assertThat(paragraph).isInstanceOf(Paragraph.class);
     assertThat(paragraph.children()).singleElement().isInstanceOf(Text.class);
-    assertThat(((Text) paragraph.children().get(0)).text()).isEqualTo("Some text.");
+    assertThat(((Text) paragraph.children().getFirst()).text()).isEqualTo("Some text.");
   }
 
   @DisplayName("When markdown contains a bullet list, then AST contains BulletList with ListItems")
@@ -86,22 +107,22 @@ class CommonmarkMarkdownMapperTest {
     // Then
     assertThat(document.children()).hasSize(1).first().isInstanceOf(BulletList.class);
 
-    BulletList list = (BulletList) document.children().get(0);
+    BulletList list = (BulletList) document.children().getFirst();
     assertThat(list.items()).hasSize(2);
 
     // First ListItem
-    ListItem firstItem = list.items().get(0);
+    ListItem firstItem = list.items().getFirst();
     assertThat(firstItem.children()).first().isInstanceOf(Paragraph.class);
-    Paragraph firstParagraph = (Paragraph) firstItem.children().get(0);
+    Paragraph firstParagraph = (Paragraph) firstItem.children().getFirst();
     assertThat(firstParagraph.children()).singleElement().isInstanceOf(Text.class);
-    assertThat(((Text) firstParagraph.children().get(0)).text()).isEqualTo("first item");
+    assertThat(((Text) firstParagraph.children().getFirst()).text()).isEqualTo("first item");
 
     // Second ListItem
     ListItem secondItem = list.items().get(1);
     assertThat(secondItem.children()).first().isInstanceOf(Paragraph.class);
-    Paragraph secondParagraph = (Paragraph) secondItem.children().get(0);
+    Paragraph secondParagraph = (Paragraph) secondItem.children().getFirst();
     assertThat(secondParagraph.children()).singleElement().isInstanceOf(Text.class);
-    assertThat(((Text) secondParagraph.children().get(0)).text()).isEqualTo("second item");
+    assertThat(((Text) secondParagraph.children().getFirst()).text()).isEqualTo("second item");
   }
 
   @DisplayName("When markdown is mapped to AST and back, then content and structure are preserved")
@@ -136,47 +157,82 @@ class CommonmarkMarkdownMapperTest {
   }
 
   @DisplayName(
-      "When AST is created manually and mapped to markdown and back, then structure stays intact")
+      "When document is created manually and mapped to markdown and back, then structure stays intact")
   @Test
-  void whenAstRoundTripsThroughMarkdown_thenStructureIsPreserved() {
+  void whenDocumentRoundTripsThroughMarkdown_thenStructureIsPreserved() {
     // Given
-    Document originalAst =
-        new Document(
-            List.of(
-                new Heading(1, List.of(new Text("Title"))),
-                new Paragraph(List.of(new Text("Some text."))),
-                new BulletList(
-                    List.of(
-                        new ListItem(List.of(new Paragraph(List.of(new Text("first item"))))),
-                        new ListItem(List.of(new Paragraph(List.of(new Text("second item")))))))));
+    Document newDocument =
+        MarkdownBuilder.document()
+            .addHeading(1, "Title")
+            .addParagraph("Some text.")
+            .addBulletList()
+            .addListItem("first item")
+            .addListItem("second item")
+            .endBulletList()
+            .build();
 
     // When
-    String markdown = mapper.toMarkdown(originalAst);
-    Document parsedAst = mapper.toAst(markdown);
+    String markdown = mapper.toMarkdown(newDocument);
+    Document parsedDocument = mapper.toAst(markdown);
 
     // Then
-    assertThat(parsedAst.children()).hasSize(3);
+    assertThat(parsedDocument.children()).hasSize(3);
 
     // Heading
-    Heading heading = (Heading) parsedAst.children().get(0);
+    Heading heading = (Heading) parsedDocument.children().getFirst();
     assertThat(heading).isInstanceOf(Heading.class);
     assertThat(heading.level()).isEqualTo(1);
-    assertThat(((Text) heading.children().get(0)).text()).isEqualTo("Title");
+    assertThat(((Text) heading.children().getFirst()).text()).isEqualTo("Title");
 
     // Paragraph
-    Paragraph paragraph = (Paragraph) parsedAst.children().get(1);
+    Paragraph paragraph = (Paragraph) parsedDocument.children().get(1);
     assertThat(paragraph).isInstanceOf(Paragraph.class);
-    assertThat(((Text) paragraph.children().get(0)).text()).isEqualTo("Some text.");
+    assertThat(((Text) paragraph.children().getFirst()).text()).isEqualTo("Some text.");
 
     // Bullet list
-    BulletList list = (BulletList) parsedAst.children().get(2);
+    BulletList list = (BulletList) parsedDocument.children().get(2);
     assertThat(list).isInstanceOf(BulletList.class);
     assertThat(list.items()).hasSize(2);
     assertThat(
-            ((Text) ((Paragraph) list.items().get(0).children().get(0)).children().get(0)).text())
+            ((Text) ((Paragraph) list.items().get(0).children().getFirst()).children().getFirst())
+                .text())
         .isEqualTo("first item");
     assertThat(
-            ((Text) ((Paragraph) list.items().get(1).children().get(0)).children().get(0)).text())
+            ((Text) ((Paragraph) list.items().get(1).children().getFirst()).children().getFirst())
+                .text())
         .isEqualTo("second item");
+  }
+
+  @Test
+  void roundtripWithBoldInline_preservesStructure() {
+    String md = "Some **bold** text.";
+
+    Document ast = mapper.toAst(md);
+    String result = mapper.toMarkdown(ast);
+
+    assertThat(result).contains("**bold**");
+  }
+
+  @Test
+  void buildsBulletList_includingParagraphWithStrongInline() {
+    // Given
+    Document doc =
+        MarkdownBuilder.document()
+            .addBulletList()
+            .addListItem(in -> in.text("Some ").strong("bold").text(" text."))
+            .endBulletList()
+            .addParagraph(in -> in.text("Some more ").strong("bold").text(" text."))
+            .build();
+
+    // When
+    BulletList bulletList = (BulletList) doc.children().get(0);
+    Paragraph bulletListParagraph = (Paragraph) bulletList.items().getFirst().children().getFirst();
+    Paragraph paragraph = (Paragraph) doc.children().get(1);
+
+    // Then
+    assertThat(paragraph.children()).hasSize(3);
+    assertThat(paragraph.children().get(1)).isInstanceOf(StrongEmphasis.class);
+
+    assertThat(bulletListParagraph.children().get(1)).isInstanceOf(StrongEmphasis.class);
   }
 }
