@@ -8,7 +8,8 @@ import static org.mockito.Mockito.when;
 
 import de.infoteam.profile_assist.domain.entity.Persona;
 import de.infoteam.profile_assist.domain.entity.Project;
-import de.infoteam.profile_assist.port.llm.entity.OptimizationResult;
+import de.infoteam.profile_assist.domain.entity.Skills;
+import de.infoteam.profile_assist.port.llm.entity.OptimizationResultImpl;
 import java.time.LocalDate;
 import java.time.Month;
 import java.util.Collections;
@@ -24,25 +25,48 @@ class SpringAiClientTest {
     ChatClient chatClient = mock(ChatClient.class, RETURNS_DEEP_STUBS);
 
     SpringAiClient springAiClient = new SpringAiClient(chatClient);
-    List<String> techStack = List.of("Java", "Spring", "SQL", "HTML", "CSS");
 
-    Project project = new Project("Project ABC", "B2C Webshop", Collections.emptyList());
+    Project project =
+        new Project(
+            "Project ABC",
+            "B2C Webshop",
+            List.of("Java", "Spring Boot"),
+            "TIME_PERIOD",
+            "BUSINESS_SECTOR",
+            12,
+            "ROLE",
+            "SPECIALIZED_FOCUS",
+            List.of("MyPersonalContribution", "AnotherPersonalContribution"),
+            List.of("ISO", "IEC"));
 
     var unoptimizedPersona =
         new Persona(
             UUID.randomUUID(),
-            "Software Guy",
-            techStack,
-            List.of("ISTQB", "SQL ISLAND"),
+            "JOB_TITLE",
+            "NAME",
+            Collections.emptyList(),
+            5,
+            Collections.emptyList(),
+            Collections.emptyList(),
+            Collections.emptyList(),
+            Skills.builder()
+                .businessSectors(Collections.emptyList())
+                .languages(Collections.emptyList())
+                .programmingLanguages(Collections.emptyList())
+                .methodicalExpertise(Collections.emptyList())
+                .tools(Collections.emptyList())
+                .operatingSystems(Collections.emptyList())
+                .databases(Collections.emptyList())
+                .build(),
             List.of(project),
-            LocalDate.of(2024, Month.JANUARY, 1),
-            LocalDate.of(2025, Month.JANUARY, 1));
+            LocalDate.now(),
+            LocalDate.now());
 
     when(chatClient.prompt().system(anyString()).user(anyString()).call().entity(Persona.class))
         .thenReturn(unoptimizedPersona);
 
-    OptimizationResult<Persona> optimizedPersona =
-        springAiClient.sendPrompt(Persona.class, "systempromot", "userprompt");
+    OptimizationResultImpl<Persona> optimizedPersona =
+        springAiClient.sendPrompt(Persona.class, "systemprompt", "userprompt");
 
     then(optimizedPersona.result()).isNotNull();
   }
